<resources>
    <string name="app_name">ListFavorite</string>
    <string name="dummy_title">Toy Story 4</string>

    <string name="original_title">Toy Story 4</string>
    <string name="date_release">20 January 2019</string>
    <string name="dummy_overview">Woody has always been confident about his place in the world and that his priority is taking care of his kid, whether that\'s Andy or Bonnie. But when Bonnie adds a reluctant new toy called Forky to her room, a road trip adventure alongside old and new friends will show Woody how big the world can be for a toy.</string>
    <string name="dummy_rate">7.4</string>

    <string name="popularity">790,000</string>
    <string name="original_language">US</string>
    <string name="original_name">Original Name</string>
    <string name="label_rate">Rate</string>
    <string name="label_release_date">Release Date</string>
    <string name="popularity_label">Popularity</string>
    <string name="original_language_label">Original Language</string>
    <string name="overview_label">Overview</string>
    <string name="favorite">Favorite</string>
</resources>
